# ChangeLog for dev-libs/gom
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gom/ChangeLog,v 1.12 2015/06/26 09:21:17 ago Exp $

  26 Jun 2015; Agostino Sarubbo <ago@gentoo.org> gom-0.3.1.ebuild:
  Stable for x86, wrt bug #551814

  21 Jun 2015; Mikle Kolyada <zlogene@gentoo.org> gom-0.3.1.ebuild:
  amd64 stable wrt bug #551814

  20 Jun 2015; Pacho Ramos <pacho@gentoo.org> gom-0.3.1.ebuild:
  sparc keyword, bug #521972

*gom-0.3.1 (14 May 2015)

  14 May 2015; Gilles Dartiguelongue <eva@gentoo.org> +gom-0.3.1.ebuild:
  Version bump.

  11 Apr 2015; Pacho Ramos <pacho@gentoo.org> -gom-0.2.1.ebuild,
  gom-0.3.0.ebuild:
  gdk-pixbuf is needed for glibtest (#546216 by Toralf Förster), drop old

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gom-0.3.0.ebuild:
  x86 stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> gom-0.3.0.ebuild:
  amd64 stable, bug 534012

  23 Feb 2015; Pacho Ramos <pacho@gentoo.org> gom-0.2.1.ebuild,
  gom-0.3.0.ebuild:
  ppc/ppc64 keyword, bug #521972

*gom-0.3.0 (18 Feb 2015)

  18 Feb 2015; Pacho Ramos <pacho@gentoo.org> +gom-0.3.0.ebuild:
  Version bump

  19 Dec 2014; Pacho Ramos <pacho@gentoo.org> gom-0.2.1.ebuild:
  amd64 stable, bug 529964

  18 Dec 2014; Pacho Ramos <pacho@gentoo.org> gom-0.2.1.ebuild:
  x86 stable, bug 529964

*gom-0.2.1 (02 Sep 2014)

  02 Sep 2014; Pacho Ramos <pacho@gentoo.org> +gom-0.2.1.ebuild, +metadata.xml:
  New package needed for grilo-plugins