@@ -4,23 +4,19 @@ Hash: SHA256
 DIST gom-0.3.0.tar.xz 382924 SHA256 352a8bee8dc47e7bd5d08af35b0d67e1f3c54bca23a058a00004cb56ede6f4fd SHA512 ab26dbbb4cbeaa637ca835eff96caf647428505129652d0229808951b3ba5ec2225e2d37054a6b61ccad59954fda7d95bb04d61f75c1ec1ebbc1abea7025b627 WHIRLPOOL 98b7fc358635e17c1c878f2439f667cecd9304a8b5d10023d2e084d01e2950201404156add20da5e05f2a1e09bd42811a31f0765fa9e196e58d4c09496ba7664
 DIST gom-0.3.1.tar.xz 385836 SHA256 7951eb46ee784cbdbee6e3f2da084ffbf776c11ca1c904404b05feafe37e38f5 SHA512 7596b7be0de6f10ef1fbe8a278d917c07ecc714e9af24f2b61a7d871c6a1b1cf19ea92d5b4fbf7802c9c097dc2ae7a65ac47b8ca8f6689b49a3e4930cff6d54c WHIRLPOOL 9fa3a42411e3892a3648f31614462d43b5a4f52a166e5edd80e97741427a9444c39d2200a4ce1ac3e1e87d3b3e974b9dad6f11ee252ba3d10fa1d63b00a09bde
 EBUILD gom-0.3.0.ebuild 839 SHA256 4430233d9ae208be43dc2bcbafa7a2e02610a8215255dd7402e77b3d2c5d9d04 SHA512 9f9f59606f78dd971346c2195ed4acc24832d98b74074c1e26891f35aea02a574980b66fa56f770f92a11bc8a9b7abf7099c94d59819082cd6ac32b8435955d3 WHIRLPOOL f8b1bf5203e18de2606bbc2cfc49e4b109cc7885082c4ce1c04a6a3142dcd2d7d1d662e1654336f13cf443ef8e3a1e0a70a9af28934ec90be11985baf5a60fc5
-EBUILD gom-0.3.1.ebuild 844 SHA256 680a6cd7a8fb68dc3171c8c3fdbab8f601be53dd161bfe641edb96683cfd92b6 SHA512 65708d12b4d3a3b859c02db941e8198e76ef195895f68e72317ec32413859a62d635f31e758854ef5fa6a92c6799a4c5e27bc5b465606b3af1ea717be6e3779b WHIRLPOOL 64cd25acc14151f78039177cd4dfaaafeedf73dbbf146f43f253c0cce6e39ebf2f8735a69de76642095bc2db251f8c6fd5a5ced58b7caba9f1a98079181e0801
-MISC ChangeLog 1502 SHA256 1629c30331d7775ca6b60f7950caa9d86a4abfe928328d31e8c777553b17a199 SHA512 80a94d4b7bb83dc7b5f274010efa2ab8ed2cbb98b50d45f13b0ff9c07cffbce0105f8f06c79b9daa2a3c2d028477cc4ddaaa120aa1950a1f89286d325f1b354b WHIRLPOOL e9b76a403d813bf4e0b32d14f8167115f6c7be45719ce9888cd059717ef1e5f563f11ded1e05aebce10ccaa5043d58f899bef74795b70c94b52404d3af33dc2c
+EBUILD gom-0.3.1.ebuild 856 SHA256 dec93cbf125abb511c33caf7caa5ff08231476960cd758386f259fdf9fd728b0 SHA512 9a441f183f035209fd6d23f9f39ea170d699e58ea9cc62cdf9e90355ab3f9aab7d6cf1cb0be940f97a878c7a62a48e5fd4bc815900242c0583eb719a891be088 WHIRLPOOL 3b91e6ed2b573f65dcbad482667c7ff0ffbaacca6d58dfaa6191ef4ab332983672d377c03458b6fde6872dcc267c6242839a79cb75420696337e801d2895f7e8
+MISC ChangeLog 1613 SHA256 2b1a5ebdc5bb0de219088d9b082b8294967157606a01711d8229298a7b998197 SHA512 d66733abff2471b7dfebe183c188350325cf85868397589b166c81b2a77f67c6b6c9a30bfc32dcbe167e13919a88ebf6b2626b76044cad58caa9d232379c8a0b WHIRLPOOL 7f75f131c75bb8706851c2a00605cd63b8c85897b8643d07e590704ec4853ebf6b6ba404acfc3652664d6ac43279e641a1cad89e23fc20a839761ddb94695815
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iQIcBAEBCAAGBQJVjRmOAAoJELp701BxlEWfZKcP/2EiC2GwnbrDGWO5vjCgIqbG
-OL7LkXo+ZcWmKKrbn63BKjFx6GodwNBGs50ErxoNw9PHpklQpAQogLGrHQNZXYZS
-9qOIAY9jsh+BiruvkpQfymO+n4C6Xgny6mJnYdWQLEpw8YI3j87nPGsM6+Bt0k9z
-sxKENPP0ks3YFcACQ1IZnOLI40C7fgvsdKpmYUdD1QDfWZMvgUmDCusA/P0Pu8IJ
-WHpDjXc3QXZCvpN5q6QsbdFLZme7FE+uSbr+Xfej6XdrKkoJuE7E8mUbUEeeAEsI
-wdgldCPmHd04ZVkpQQ2npB/e0YNkGmYiNOPw/ZD7SHwPa7D4UZBkRZgoKy+8uzuy
-7I6EOccDuaMCfKVll+4vcxHfVbtbw2ylOn/mQDYjSzyNa4y5cUbbqg1eQCZEbfPr
-TDozdOyhETv8VyU0aCNARUP2zZt/mCMluYCIthkS6PyX6RPRZ8ri2vY/6jHM1FcU
-pOJaI4bdOicRYKDwXVH8AdV1138pm6ARSMGLUlkvjN5WefmKX9QNh+oVG6FXt+f2
-8KDW7dzc8YVydkp99p4T3JdfyvmsUA6lcKJnJPKhDmLF4iTopAldsXpAAwFAaWtS
-FDCf6L4EV2csz/qzOeL3m1bZWGtJailgjN8AV4C8WlddzoD4+cjhBqGh0EQLuLUM
-08znWFJXI8XBk0CK/PBv
-=msxO
+iQF8BAEBCABmBQJVxMjYXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRFQ0MxMDlFRTJGQzJGRUFENTYzQjg4OUJG
+RjEwQ0RDNjIwNjc1NDc4AAoJEP8QzcYgZ1R4bl4IAJmcfcRvnP62rNF7vOlw9t94
+nVkP3HVZOpTFk0Qae9HlJpevsVKmeNfRSdNsj5q/BwVGch1tOp4qyuKfaInVxFDw
+H+lXwc8QBA3ZRJG8V+qgi+zB6+eQ/2Op8eWhNSiKeAKN6fMAbNhGHZPx73g6R++v
+JQOwJ/Sl5l9BY17C2OS71BRAYEomIno1Bxj8OoHg8g9YpSrcUlpYs5rRVGUSowR4
+Y1hwBARMEDIn9CxH8rEKbsRR86P7yLHi+t11LCh/+yZPDX3iTcEAtdJep2zd0wR2
+sP+mpjvs1/eqnb5TBsz5EEd1LWJVAFNcqqJ+0RCEcfgxdhtQLvuenrFnKP1gA9U=
+=WEiW
 -----END PGP SIGNATURE-----
