@@ -5,14 +5,20 @@ DIST grilo-plugins-0.2.12.tar.xz 721592 SHA256 15bed8a633c81b251920ab677d455433e
 DIST grilo-plugins-0.2.13.tar.xz 999896 SHA256 a5544831ba81a4e7caea30da89874fd20142a362d389366e1113d0e64be51201 SHA512 5ec97ea16fc13c13090d58067bc982176967f49b7f996b2ee75fe2c915bfdaf96fb780730b9aeca3ba1e7d566526b7c7423a238b0285b0f60b97ad66b1cb0e03 WHIRLPOOL ef0cadaf229d02083efe6375db2ef335b88b9f46a29d671713957625868a30294952e538cb280de387d5078823ebd2f6d80ddb76d2ebed81008d53b44d3e62f5
 DIST grilo-plugins-0.2.14.tar.xz 1036824 SHA256 d0f18116675058c7e8c178b1fe26d6d73998a0452f85a73b1696df740c83d3ab SHA512 d4caddb5a710f19365d1d9e890b1d525b96e78cf2228a886f1b2c66e60601c2bef61791007d0d9cc8d3b306aac3065c0ff618ef522c7971885c95ca2e365c69b WHIRLPOOL 40899069c626a4183a9cf2afe94f8290dd39bd0bed8475b5d0732d3aa2521eb6fb6f275fba38d47b0614a9e16501f63ee0c5180dd88082ceb14bff0867f7cfe5
 EBUILD grilo-plugins-0.2.12.ebuild 2451 SHA256 ae5746a8f3cdc3de37d4aa79ad30c780420251d61c7d3e326664b6845b046c37 SHA512 465dc483f5bd9d28449862ee997db63e71199cd249eb178f954c3931b59861a4b79281d3f6a8c66aec79aa74028cdf2d4eebacedc14522544948038d5869a487 WHIRLPOOL 9e7c3ba239279cb1ea889702817e43ec866d8b0083209fa714a3619cf98c526aa9a8ba2401ea24797be92dc2ad75d4988ecd1f328427c967a354b1d3e0797639
-EBUILD grilo-plugins-0.2.13.ebuild 2474 SHA256 60f9f92a9f902d3d0d11bbe99e12b7f2b65e52906f69a28f3aa669feeabff0c5 SHA512 bd2c35c63bce9283f1bc3d785f73870cb68522385e81bd19d47a4efd8579504373d05a527f824ab4f8f1ea3bf27bd312f543507d0e1da036ea378487b7cb4980 WHIRLPOOL 62d0fe4e91e353a51b6e1057d056cef612f192b65e0239260e4eeefdef2f07ea9819d5d0fdd67bff91e521e9f138fadcbd4a6c277253a67b90ceefc53454be0d
+EBUILD grilo-plugins-0.2.13.ebuild 2486 SHA256 60b7bb5e909e986c584b9747a972e086123637bc9d5c939c860d584402518153 SHA512 861cf8dfc67f00127ed87cc9c2d99c854da75602a22bc85b132633a9550d0aa1c2b510c9f79f39fedf9b552a8633761f925d17df91a84e104f2173694a6cfa3e WHIRLPOOL 04d6d530a0a7e9de9156454594bb4249d7bb8503505fd21f6806575eaec19122a3c908d8cfe504763062f71baeca6684583eeb616b7ce8df62c06ace4f5ac5ee
 EBUILD grilo-plugins-0.2.14.ebuild 2689 SHA256 590298e0ea9badf0ac4a6734613714df133bd0af75173dec4fe762428d5baebe SHA512 434993a1e7bb28ffc4d4739191481f14e55592edb7ae6c49cb3ffa6d1b75df1f88a16b4c92f8757f14f545106af010928ba67a9f4256d28709043b02d9a90642 WHIRLPOOL ada11b9b16b7f3d8527b37a0f17434979945c712c8de3c7503264d94286a69320a78a34d9aa388f403445ad08f027fc83e55410f9e203418a326b17066eae85d
-MISC ChangeLog 9449 SHA256 4be87f62d77d5df438ffa7cb7a8748820b3a49290015be5d4026d81b5418377a SHA512 403b0f9cacc5037dca127f82e4e1afdd16259a422ef55bfe1b25342c74b2f781db3295780d7909439abef3f9232e65da5df788cf0b2cb028092fb1a973449706 WHIRLPOOL 08baaede338a40552f7902db60f2cde7804b69cd2954c68c714150acc04e2826682205d874248c413c716ed838c4e5b1346b47a7a9e2362622bfc88fa5e72769
+MISC ChangeLog 9573 SHA256 340f31c8e0cd464ae83907d7a13abd40689e62101d22f836d04a0e567c74cba0 SHA512 12130e81434542a206d2a0a70e760f0985bb354870453e77f48f4c784238b6b5f17ea7638ac00624cd9239e089fe4fcdf1b44f821926bf1e78736a164c6478e7 WHIRLPOOL e81b71e3472a17572ff0988a972b2157a66e25f5897fa6ecba2789c9a2dd47126d14042ba8526f9ededc01548d60e9323ec6aa3bffb74c919a524d8acd9c1a81
 MISC metadata.xml 1053 SHA256 6c777838151253bbe498b19933f6164bf1ebdb0e7a694318a439658528d3255c SHA512 aa2f74bda1c3eb8ae556861d402750127a7842fed910a0a21e643e59717c11f4ba96e74a9c9720bea258bde2a9c29ed7d9d68638dc4929434260cdcbedb8b297 WHIRLPOOL 85fc5541fc9f88906c9e94216bef5298390fff91a3df225410ea823e719baa2eaee981986a9aeeaab3f2d1ff091a959e4f45e653ad8911b266c533e8d2b04d50
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iEYEAREIAAYFAlV3e1AACgkQ1fmVwcYIWAYMlACgyk+2v7yJuYz3RNS5WuLDrbZw
-OPEAnAor7V/FY0faYhR7fYxBOYT5GqMf
-=8VAH
+iQF8BAEBCABmBQJVxMjAXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRFQ0MxMDlFRTJGQzJGRUFENTYzQjg4OUJG
+RjEwQ0RDNjIwNjc1NDc4AAoJEP8QzcYgZ1R4LfQH/299pP2UyuCIwl6NkO3GT+Al
+8hXZl68lfgPtEb1kM5cwN1Q5s4Ke+v7JpJUvG7o4RwSfo9/aSYNnDClD4H110Lli
+XKy9xUhIEtNJ9W/ehQzarfDEi4A7Wpal/5KFuQRRxhpt2NL28gH5MgRfVAbLyPOK
+P8uyJynVEcOvixXoR0Rd3T1VMk6G12O4cTGjJwImhuAzKWt64Y96gyBrwCNK7rSM
+LEzcGh4qcCIUgaADscotyF43lD//pFMd4YmVaV/SKa7eVKKD/ayXg6Jsb7HatiUw
+tL1K0549bwNxsgjVj1eB7mpp/lLHcYmDUjHh03+MWnnNSJIlpM1umcmFHwsz7VM=
+=Srqz
 -----END PGP SIGNATURE-----
