@@ -4,10 +4,10 @@ DESCRIPTION=GObject to SQLite object mapper library
 EAPI=5
 HOMEPAGE=https://wiki.gnome.org/Projects/Gom
 IUSE=+introspection test debug
-KEYWORDS=amd64 ~ppc ~ppc64 ~sparc x86
+KEYWORDS=~alpha amd64 ~ppc ~ppc64 ~sparc x86
 LICENSE=LGPL-2+
 RDEPEND=>=dev-db/sqlite-3.7:3 >=dev-libs/glib-2.36:2 introspection? ( >=dev-libs/gobject-introspection-1.30.0 )
 SLOT=0
 SRC_URI=mirror://gnome/sources/gom/0.3/gom-0.3.1.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	45882dc8beda2ffd09ad51fb3f22b669	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=225b4ec82baa9dba8a09ec2f3664b5a4
+_md5_=590d487acf4ba6ae76836be2906bff25
