@@ -4,10 +4,10 @@ DESCRIPTION=A framework for easy media discovery and browsing
 EAPI=5
 HOMEPAGE=https://wiki.gnome.org/Projects/Grilo
 IUSE=daap +dvd flickr freebox gnome-online-accounts lua pocket thetvdb tracker upnp-av +vimeo +youtube
-KEYWORDS=amd64 ~ppc ~ppc64 x86
+KEYWORDS=~alpha amd64 ~ppc ~ppc64 x86
 LICENSE=LGPL-2.1+
 RDEPEND=>=dev-libs/glib-2.36:2 >=media-libs/grilo-0.2.11:0.2[network,playlist] >=media-libs/libmediaart-0.1:1.0 >=dev-libs/gom-0.2.1 dev-libs/gmime:2.6 dev-libs/json-glib dev-libs/libxml2:2 dev-db/sqlite:3 daap? ( >=net-libs/libdmapsharing-2.9.12:3.0 ) dvd? ( >=dev-libs/totem-pl-parser-3.4.1 ) flickr? ( net-libs/liboauth ) freebox? ( net-dns/avahi ) gnome-online-accounts? ( >=net-libs/gnome-online-accounts-3.7.1 ) lua? ( >=dev-lang/lua-5.2 app-arch/libarchive ) pocket? ( >=net-libs/gnome-online-accounts-3.11.4 >=net-libs/rest-0.7.90 >=dev-libs/totem-pl-parser-3.4.1 ) thetvdb? ( app-arch/libarchive dev-libs/libxml2 ) tracker? ( >=app-misc/tracker-0.10.5:= ) youtube? ( >=dev-libs/libgdata-0.9.1:= dev-libs/totem-pl-parser ) upnp-av? ( net-libs/libsoup ) vimeo? ( dev-libs/totem-pl-parser )
 SLOT=0.2
 SRC_URI=mirror://gnome/sources/grilo-plugins/0.2/grilo-plugins-0.2.13.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	45882dc8beda2ffd09ad51fb3f22b669	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=2ddfe1fa43d6c6403eb2e496ff246141
+_md5_=1daec88fee4994bcacc05d1e21ca64a3
