@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/grilo-plugins
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.49 2015/06/09 23:48:31 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.50 2015/08/07 15:03:27 klausman Exp $
+
+  07 Aug 2015; Tobias Klausmann <klausman@gentoo.org>
+  grilo-plugins-0.2.13.ebuild:
+  Keyworded on alpha, bug 521972
 
 *grilo-plugins-0.2.14 (09 Jun 2015)
 
