@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/gom
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gom/ChangeLog,v 1.12 2015/06/26 09:21:17 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gom/ChangeLog,v 1.13 2015/08/07 15:03:51 klausman Exp $
+
+  07 Aug 2015; Tobias Klausmann <klausman@gentoo.org> gom-0.3.1.ebuild:
+  Keyworded on alpha, bug 521972
 
   26 Jun 2015; Agostino Sarubbo <ago@gentoo.org> gom-0.3.1.ebuild:
   Stable for x86, wrt bug #551814
